package stars;

public interface NotificationInterface {
    public void sendNotification(Index index);
}
